--- a/23_Events_delegation/03_ToDo_upgrate/index.html
+++ b/23_Events_delegation/03_ToDo_upgrate/index.html
@@ -20,7 +20,7 @@
     <ul class="list"></ul>
   </main>
 
-  <script src="index.js"></script>
+  <script src="src/scripts/index.js" type="module"></script>
 </body>
 
 </html>
